src_old/objects/SurveyScoreSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DefinedResponseWeight__c</fullName>
        <label>Defined Response Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JumpQuestionWeight__c</fullName>
        <label>Jump Question Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionWeight__c</fullName>
        <label>Question Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyScoreThreshold__c</fullName>
        <label>Survey Score Threshold</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyScoreWarning__c</fullName>
        <label>Survey Score Warning</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey Score Settings</label>
</CustomObject>